[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/audio button.png" type="Texture" id=1]
[ext_resource path="res://art/audio button focus.png" type="Texture" id=2]
[ext_resource path="res://art/control button.png" type="Texture" id=3]
[ext_resource path="res://art/control button focus.png" type="Texture" id=4]
[ext_resource path="res://art/quit button.png" type="Texture" id=5]
[ext_resource path="res://art/quit button focus.png" type="Texture" id=6]
[ext_resource path="res://MusicBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://SoundBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Inverter.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/menu.png" type="Texture" id=10]
[ext_resource path="res://sounds/music_zapsplat_winter_dance.mp3" type="AudioStream" id=11]
[ext_resource path="res://art/just quit.png" type="Texture" id=14]
[ext_resource path="res://art/save quit.png" type="Texture" id=15]
[ext_resource path="res://Settings.gd" type="Script" id=16]

[node name="Settings" type="Control" groups=[
"Persist",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.396851
margin_right = 0.396851
script = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bground" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -524.284
margin_top = -288.465
margin_right = 515.716
margin_bottom = 311.535
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AudioBtn" type="TextureButton" parent="."]
margin_left = -337.318
margin_top = -174.155
margin_right = -141.318
margin_bottom = -104.155
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ControlBtn" type="TextureButton" parent="."]
margin_left = -346.071
margin_top = -62.1631
margin_right = -117.071
margin_bottom = 20.8369
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="TextureButton" parent="."]
margin_left = -361.666
margin_top = 69.8189
margin_right = -132.665
margin_bottom = 152.819
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="justquit" type="TextureButton" parent="." groups=[
"quit",
]]
visible = false
margin_left = 25.4218
margin_top = 28.4519
margin_right = 260.422
margin_bottom = 131.452
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="savequit" type="TextureButton" parent="." groups=[
"quit",
]]
visible = false
margin_left = 29.6648
margin_top = -139.13
margin_right = 264.665
margin_bottom = -36.1301
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SoundBox" parent="." instance=ExtResource( 8 )]
margin_left = -60.8792
margin_top = -140.821
margin_right = 401.121
margin_bottom = -57.8211

[node name="MusicBox" parent="." instance=ExtResource( 7 )]
margin_left = -60.8312
margin_top = 26.1889
margin_right = 401.169
margin_bottom = 109.189

[node name="Inverter" parent="." instance=ExtResource( 9 )]
margin_left = -20.1842
margin_top = -131.763
margin_right = 308.816
margin_bottom = -40.7629

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0

[connection signal="save_quit" from="." to="." method="_on_Settings_save_quit"]
[connection signal="pressed" from="AudioBtn" to="." method="_on_AudioBtn_pressed"]
[connection signal="pressed" from="ControlBtn" to="." method="_on_ControlBtn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="justquit" to="." method="_on_justquit_pressed"]
[connection signal="pressed" from="savequit" to="." method="_on_savequit_pressed"]
[connection signal="volume_changed" from="SoundBox" to="." method="setting_changed"]
[connection signal="volume_changed" from="MusicBox" to="." method="setting_changed"]
[connection signal="shift" from="Inverter" to="." method="_on_Inverter_shift"]
